feat: create graphic by data

--- a/index.html
+++ b/index.html
@@ -28,49 +28,7 @@
     </header>
     <main>
       <h2 class="main__title">Periodo - Ultimos 7 dias</h2>
-      <div class="main__grafico">
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar bar__maxday"></span>
-          <small class="line__legend">Wed</small>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-
-        <div class="grafico__line">
-          <span class="line__tooltip">240</span>
-          <span class="line__bar"></span>
-          <span class="line__legend">Wed</span>
-        </div>
-      </div>
+      <div class="main__grafico"></div>
       <div class="main__infos">
         <div>
           <p class="infos__legend">Total no Mês</p>
@@ -82,5 +40,7 @@
         </div>
       </div>
     </main>
+
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
